# Magnet_AS

./: .gitignore  readme.md
app/: build.gradle
app/src/androidTest/java/com/example/first/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/CoreData/Techniques/: NoTexture.xml
app/src/main/assets/Data/UI/: ScreenJoystick.xml  ScreenJoystickSettings.xml  ScreenJoystickSettings_Samples.xml
app/src/main/assets/GameData/Materials/: Battery.xml  Contour.xml  Ground.xml  Magnet.xml  Magnet_Poluses.xml  Wire.xml  Wire_Main.xml
app/src/main/assets/GameData/Models/Battery/: Battery.mdl
app/src/main/assets/GameData/Models/Contour/: Contour.mdl
app/src/main/assets/GameData/Models/Magnet/: Magnet.mdl
app/src/main/assets/GameData/Models/Ring/: Ring.mdl
app/src/main/assets/GameData/Models/Wire/: Wire.mdl  Wire_2.mdl
app/src/main/assets/GameData/Scenes/: Electromagnetism_contour.xml  Electromagnetism_contour_NEW.xml
app/src/main/assets/GameData/System/: SimulationOptions.xml
app/src/main/assets/GameData/UI/: BatteryUI.xml  Battery_UI.xml  ContourUI.xml  Contour_UI.xml  MagnetUI.xml  Magnet_UI.xml  MainMenuUI.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/GameEngine/: CMakeLists.txt  GameEngineApp.cpp  GameEngineApp.h  GameEngineStd.h
app/src/main/cpp/GameEngine/Controllers/: MovementController.cpp  Touch.cpp  Touch.h
app/src/main/cpp/GameEngine/Debugging/: Debugging.h
app/src/main/cpp/GameEngine/Events/: GameEngineEvents.cpp
app/src/main/cpp/GameEngine/GameLogic/: BaseGameLogic.cpp  BaseGameLogic.h
app/src/main/cpp/GameEngine/Interfaces/: IGameLogic.cpp  IGameView.cpp  IGameView.h  IScreenElement.cpp  Interfaces.h
app/src/main/cpp/GameEngine/Interfaces/Controllers/: IKeyboardHandler.cpp  IPointerHandler.cpp
app/src/main/cpp/GameEngine/Mainloop/: Initialization.cpp  Initialization.h
app/src/main/cpp/GameEngine/UserInterface/: LayoutUtility.cpp  LayoutUtility.h  UserInterface.cpp  UserInterface.h
app/src/main/cpp/GameEngine/UserInterface/HumanView/: HumanView.cpp
app/src/main/cpp/GameEngine/Utility/: ApplicationMessage.cpp
app/src/main/cpp/Magnet/: CMakeLists.txt  MagnetApp.cpp  MagnetApp.h  MagnetStd.cpp  MagnetStd.h
app/src/main/cpp/Magnet/Components/Objects/: BatteryComponent.cpp  BatteryComponent.h  ContourComponent.cpp  ContourComponent.h  MagnetComponent.cpp  MagnetComponent.h
app/src/main/cpp/Magnet/Events/: MagnetEvents.cpp  MagnetEvents.h
app/src/main/cpp/Magnet/GameLogic/: MagnetLogic.cpp  MagnetLogic.h
app/src/main/cpp/Magnet/GameView/: MagnetView.cpp  MagnetView.h
app/src/main/cpp/Magnet/UserInterface/ScreenElements/MagnetUI/: BatteryUI.cpp  BatteryUI.h  ContourUI.cpp  ContourUI.h  MagnetUI.cpp  MagnetUI.h  MainMenuUI.cpp  MainMenuUI.h
app/src/main/cpp/Simulation/: CMakeLists.txt  SimulationApp.cpp  SimulationApp.h  SimulationStd.cpp  SimulationStd.h
app/src/main/cpp/Simulation/Controllers/: MovementController.cpp  MovementController.h  Touch.cpp
app/src/main/cpp/Simulation/Events/: SimulationsEvents.cpp  SimulationsEvents.h
app/src/main/cpp/Simulation/GameLogic/: BaseGameLogic.cpp  BaseGameLogic.h
app/src/main/cpp/Simulation/Interfaces/: IGameLogic.cpp  IGameLogic.h  IGameView.cpp  IScreenElement.cpp  IScreenElement.h
app/src/main/cpp/Simulation/Interfaces/Controllers/: IKeyboardHandler.cpp  IKeyboardHandler.h  IPointerHandler.cpp  IPointerHandler.h
app/src/main/cpp/Simulation/Mainloop/: Initialization.cpp  Initialization.h
app/src/main/cpp/Simulation/UserInterface/: LayoutUtility.cpp  UserInterface.cpp
app/src/main/cpp/Simulation/UserInterface/HumanView/: HumanView.cpp  HumanView.h
app/src/main/cpp/Simulation/Utility/: ApplicationMessage.cpp  ApplicationMessage.h
app/src/main/cpp/Urho3D_Framework_1_7/Magnet_Shell_Scripts/: Compile_MIPS_Debug.bat  Compile_MIPS_Release.bat  Compile_MIPS_x64_Debug.bat  Compile_MIPS_x64_Release.bat  Compile_armeabi-v7a_Debug.bat  Compile_armeabi-v7a_Release.bat  Compile_armeabi_Debug.bat  Compile_armeabi_Release.bat  Compile_x86_64_Debug.bat  Compile_x86_64_Release.bat  Compile_x86_Debug.bat  Compile_x86_Release.bat
app/src/main/cpp/Urho3D_Framework_1_7/Shell_Scripts/: Compile_MIPS_Debug.bat  Compile_MIPS_Release.bat  Compile_MIPS_x64_Debug.bat  Compile_MIPS_x64_Release.bat  Compile_armeabi-v7a_Debug.bat  Compile_armeabi-v7a_Release.bat  Compile_armeabi_Debug.bat  Compile_armeabi_Release.bat  Compile_x86_64_Debug.bat  Compile_x86_64_Release.bat  Compile_x86_Debug.bat  Compile_x86_Release.bat
app/src/main/cpp/Urho3D_Framework_1_7/Source/Urho3D/: CMakeLists.txt
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/java/sim/mag/app/: MagnetActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/first/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
